tests/invalid/invalid_string_escape_sequence.ri
func main() {
    _ = "abc\_def";
}
